# ArdanOrganization

code/: Cargo.toml
code/ex01_local_globals/: Cargo.toml
code/ex01_local_globals/src/: main.rs  master_cache.rs
code/ex02_sharding_local/: Cargo.toml
code/ex02_sharding_local/src/: main.rs  master_cache.rs
code/ex03_thread_telemetry/: Cargo.toml
code/ex03_thread_telemetry/src/: main.rs  telemetry.rs
code/ex04_thread_actor_cache/: Cargo.toml
code/ex04_thread_actor_cache/src/: cache_actor.rs
code/ex05_thread_flume/: Cargo.toml
code/ex05_thread_flume/src/: cache_actor.rs  main.rs
code/ex06_async_telemetry/: Cargo.toml
code/ex06_async_telemetry/src/: main.rs  telemetry.rs
code/ex07_async_actor/: Cargo.toml
code/ex07_async_actor/src/: cache_actor.rs  main.rs
code/ex08_mixed/: Cargo.toml
code/ex08_mixed/src/: main.rs  web.rs
code/ex09_dataflow1/: Cargo.toml
code/ex09_dataflow1/src/: ingestor.rs  main.rs
code/ex10_dataflow2/: Cargo.toml
code/ex10_dataflow2/src/: batcher.rs  main.rs
code/ex11_dataflow3/: Cargo.toml
code/ex11_dataflow3/src/: batcher.rs  ingestor.rs  logger.rs  main.rs  moving_average.rs
code/ex12_dataflow4/: Cargo.toml
code/ex12_dataflow4/src/: main.rs  moving_average.rs  telemetry.rs
code/ex13_dataflow5/: Cargo.toml
code/ex13_dataflow5/src/: ingestor.rs  logger.rs  main.rs  telemetry.rs  web.rs
code/public_global_app/: Cargo.toml
code/public_global_app/src/: document_cache.rs  main.rs
code/src/: main.rs
code/timed_lru_cache/: Cargo.toml
code/timed_lru_cache/src/: lib.rs  timed_cache.rs  (+1 more)
(+46 files in other folders)
