[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
	"timed_lru_cache", # Cache library - used in multiple examples
	"public_global_app", "ex01_local_globals", "ex02_sharding_local", "ex03_thread_telemetry", "ex04_thread_actor_cache", "ex05_thread_flume", "ex06_async_telemetry", "ex07_async_actor", "ex08_mixed", "ex09_dataflow1", "ex10_dataflow2", "ex11_dataflow3", # First example application
]

[workspace.dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
oneshot = "0.1.11"
flume = "0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
